--- a/style.css
+++ b/style.css
@@ -1,30 +1,48 @@
 body {
 	display: flex;
 	justify-content: center; align-items: center;
+	
 	margin: 0; width: 100vw; height: 100vh;
 	background-color: lightgrey;
 }
 
-#display {
-	background: white;
-	height: 5vh;
-	padding: 40px; margin: 0;
-}
-
 #calculator {
-	margin: 0; padding: 50px;
-	width: 35vw; height: 60vh;
+	padding: 20px;
+	width: 420px; height: 450px;
 	background-color: grey;
 }
 
-.operations {
+#calculator-body {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-around;
-	gap: 30px;
-	padding: 40px;
+	flex-direction: row;
+	justify-content: center;
+}
+
+#display {
+	display: flex;
+	justify-content: flex-end;
+	font-size: 46px;
+	
+	background: white;
+	width: 100% ; height: 20%;
+	padding: 20px; margin: 0;
+}
+
+.rows {
+	display: flex;
+	flex-direction: column;
+	background: black;
+	width: 100%;
+	align-items: center;
+}
+
+#row1, #row2, #row3, #row4 {
+	margin-bottom: 10px; margin-top: 10px;
+	justify-content: center;
 }
 
 button{
-	width: 10vw; height: 5vh;
+	flex: 1 25%;
+	width: 80px; height: 70px;
 }
